--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -13,6 +13,9 @@
         <dependent-module archiveName="EscolaBEANS-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/EscolaBeans/EscolaBeans">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="Financeiro-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Financeiro/Financeiro">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="webInterface"/>
         <property name="java-output-path" value="/EscolaWebService/target/classes"/>
     </wb-module>
