--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="EscolaWebService">
+    <wb-module deploy-name="EscolarWebService">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-        <dependent-module archiveName="EscolaDTO-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/EscolaDTO/EscolaDTO">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="org.aaf.services-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/EscolaService/EscolaService">
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
-        <dependent-module archiveName="EscolaBEANS-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/EscolaBeans/EscolaBeans">
+        <dependent-module archiveName="EscolarServices-0.0.2-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/EscolarServices/EscolarServices">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="Financeiro-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Financeiro/Financeiro">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="EscolarDTO-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/EscolarDTO/EscolarDTO">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="webInterface"/>
-        <property name="java-output-path" value="/EscolaWebService/target/classes"/>
+        <property name="java-output-path" value="/EscolarWebService/target/classes"/>
     </wb-module>
 </project-modules>
