--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -10,6 +10,9 @@
         <dependent-module archiveName="Financeiro-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Financeiro/Financeiro">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="base-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/base/base">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="EscolarDTO-0.0.2-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/EscolarDTO/EscolarDTO">
             <dependency-type>uses</dependency-type>
         </dependent-module>
